--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
+pre-commit = "^3.5.0"
 
 [build-system]
 requires = ["poetry-core"]
