--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,20 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-    -   id: check-ast
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-    -   id: black
--   repo: https://github.com/pycqa/flake8
-    rev: 6.1.0
-    hooks:
-    -   id: flake8
--   repo: local
-    hooks:
-        - id: pytest-check
-          name: pytest-check
-          entry: poetry run pytest
-          language: system
-          pass_filenames: false
-          always_run: true
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v5.0.0
+  hooks:
+  - id: check-ast
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.11.10
+  hooks:
+  - id: ruff-check
+  - id: ruff-format
+- repo: local
+  hooks:
+  - id: pytest-check
+    name: pytest-check
+    entry: uv run pytest
+    language: system
+    pass_filenames: false
+    always_run: true
