--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,13 @@
-[tool.poetry]
+[project]
 name = "compiler-front-end"
 version = "0.1.0"
 description = "Compiler front-end framework, built on min-DFA based regex engine, and LR(1) item set automata"
 authors = ["med <medioqrity@gmail.com>"]
 readme = "README.md"
+requires-python = ">=3.11"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.3"
-pre-commit = "^3.5.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
+]
